updated route for calculator and title in index html

--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,16 @@
     <!-- Favicon-->
     <link rel="icon" href="%PUBLIC_URL%/meta/favicon.ico" />
     <!-- Meta: General -->
-    <meta name="title"              content="Mortgage Advisors" />
+    <meta name="title"              content="Mortgage Zone" />
     <meta name="description"        content="A fullstack application where mortgage seekers can submit scenario requests and view a list of brokers using Reactjs, express, nodejs and MongoDB" />
-    <!-- Meta: Facebook -->
-    <meta property="og:title"       content="Mortgage Advisors" />
+    <!-- Meta: FaceZone
+    <meta property="og:title"       content="Mortgage Zone" />
     <meta property="og:description" content="An application where mortgage seekers can submit scenario requests and view a list of brokers using Reactjs, express, nodejs and MongoDB" />
     <meta property="og:image"       content="_URL_IMG/meta/mtg.webp" />
     <meta property="og:url"         content="_URL_SITE" />
     <meta property="og:type"        content="website" />
     <!-- Meta: Twitter -->
-    <meta property="twitter:title"  content="Mortgage Advisors">    
+    <meta property="twitter:title"  content="Mortgage Zone">    
     <meta property="twitter:description" content="An application where mortgage seekers can submit scenario requests and view a list of brokers using Reactjs, express, nodejs and MongoDB" />
     <meta property="twitter:image"  content="_URL_IMG" />
     <meta property="twitter:url"    content="_URL_SITE" />
@@ -30,7 +30,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/meta/manifest.json" />
 
-    <title>Mortgage Advisors</title>
+    <title>Mortgage Zone</title>
   </head>
   
   <body>
